groupchat interface update

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -7,12 +7,20 @@
   --ion-font-family: "Roboto", sans-serif;
 
   /** primary **/
-  --ion-color-primary: #e2666a;
-  --ion-color-primary-rgb: 225,102,105;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255,255,255;
-  --ion-color-primary-shade: #0ec254;
-  --ion-color-primary-tint: #28e070;
+  // --ion-color-primary: #e2666a;
+  // --ion-color-primary-rgb: 225,102,105;
+  // --ion-color-primary-contrast: #ffffff;
+  // --ion-color-primary-contrast-rgb: 255,255,255;
+  // --ion-color-primary-shade: #0ec254;
+  // --ion-color-primary-tint: #28e070;
+
+  /** orange **/
+    --ion-color-primary: #ff9c36;
+    --ion-color-primary-rgb: 255,156,54;
+    --ion-color-primary-contrast: #000000;
+    --ion-color-primary-contrast-rgb: 0,0,0;
+    --ion-color-primary-shade: #e08930;
+    --ion-color-primary-tint: #ffa64a;
 
   /** secondary **/
   --ion-color-secondary: #fff;
@@ -98,6 +106,14 @@
   --ion-color-darkgrey-shade: #616368;
   --ion-color-darkgrey-tint: #a2a4ab;
 
+  /** orange **/
+  --ion-color-orange: #ff9c36;
+  --ion-color-orange-rgb: 255,156,54;
+  --ion-color-orange-contrast: #000000;
+  --ion-color-orange-contrast-rgb: 0,0,0;
+  --ion-color-orange-shade: #e08930;
+  --ion-color-orange-tint: #ffa64a;
+
   /** button 1 **/
   --ion-color-button1: #4267B2;
   --ion-color-button1-rgb: 66,103,178;
@@ -130,12 +146,20 @@
    */
 
   body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66,140,255;
-    --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+    // --ion-color-primary: #428cff;
+    // --ion-color-primary-rgb: 66,140,255;
+    // --ion-color-primary-contrast: #ffffff;
+    // --ion-color-primary-contrast-rgb: 255,255,255;
+    // --ion-color-primary-shade: #3a7be0;
+    // --ion-color-primary-tint: #5598ff;
+
+    /** orange **/
+    --ion-color-primary: #ff9c36;
+    --ion-color-primary-rgb: 255,156,54;
+    --ion-color-primary-contrast: #000000;
+    --ion-color-primary-contrast-rgb: 0,0,0;
+    --ion-color-primary-shade: #e08930;
+    --ion-color-primary-tint: #ffa64a;
 
 /*    --ion-color-secondary: #50c8ff;
     --ion-color-secondary-rgb: 80,200,255;
@@ -150,12 +174,12 @@
     --ion-color-secondary-shade: #1e2023;
     --ion-color-secondary-tint: #383a3e;
 
-    --ion-color-tertiary: #6a64ff;
-    --ion-color-tertiary-rgb: 106,100,255;
+    --ion-color-tertiary: #4A90E2;
+    --ion-color-tertiary-rgb: 74,144,226;
     --ion-color-tertiary-contrast: #ffffff;
     --ion-color-tertiary-contrast-rgb: 255,255,255;
-    --ion-color-tertiary-shade: #5d58e0;
-    --ion-color-tertiary-tint: #7974ff;
+    --ion-color-tertiary-shade: #0bb8cc;
+    --ion-color-tertiary-tint: #24d6ea;
 
     --ion-color-success: #2fdf75;
     --ion-color-success-rgb: 47,223,117;
@@ -224,12 +248,27 @@
     --ion-color-lightgrey-tint: #383a3e;
 
     /** dark grey **/
-    --ion-color-darkgrey: #F0F0F0;
-    --ion-color-darkgrey-rgb: 240,240,240;
-    --ion-color-darkgrey-contrast: #ffffff;
-    --ion-color-darkgrey-contrast-rgb: 255,255,255;
-    --ion-color-darkgrey-shade: #86888f;
-    --ion-color-darkgrey-tint: #a2a4ab;
+    // --ion-color-darkgrey: #F0F0F0;
+    // --ion-color-darkgrey-rgb: 240,240,240;
+    // --ion-color-darkgrey-contrast: #ffffff;
+    // --ion-color-darkgrey-contrast-rgb: 255,255,255;
+    // --ion-color-darkgrey-shade: #86888f;
+    // --ion-color-darkgrey-tint: #a2a4ab;
+
+    --ion-color-darkgrey: #C6C6C6;
+    --ion-color-darkgrey-rgb: 198,198,198;
+    --ion-color-darkgrey-contrast: #000000;
+    --ion-color-darkgrey-contrast-rgb: 0,0,0;
+    --ion-color-darkgrey-shade: #aeaeae;
+    --ion-color-darkgrey-tint: #cccccc;
+
+    // /** orange **/
+    // --ion-color-primary: #ff9c36;
+    // --ion-color-primary-rgb: 255,156,54;
+    // --ion-color-primary-contrast: #000000;
+    // --ion-color-primary-contrast-rgb: 0,0,0;
+    // --ion-color-primary-shade: #e08930;
+    // --ion-color-primary-tint: #ffa64a;
 
     /** button 1 **/
     --ion-color-button1: #4267B2;
