--- a/src/app/pages/group/groupchat/groupchat.page.scss
+++ b/src/app/pages/group/groupchat/groupchat.page.scss
@@ -181,6 +181,12 @@ app-groupchat {
     p {
       color: black;
     }
+    a:link {
+      color:var(--ion-color-tertiary);
+    }
+    a:visited {
+      color:var(--ion-color-tertiary);
+    }
   }
 
   .chat-bubble.left:before {
@@ -191,20 +197,20 @@ app-groupchat {
 
   .chat-bubble.right {
     margin-left: 2%;
-    background-color: #979797;
+    background-color: var(--ion-color-primary);
     p {
       color: #fff;
     }
     a:link {
-      color: purple;
+      color:var(--ion-color-tertiary);
     }
     a:visited {
-      color: purple;
+      color:var(--ion-color-tertiary);
     }
   }
 
   .chat-bubble.right:before {
-    background-color: #979797;
+    background-color: var( --ion-color-primary);
     right: 10px;
     -webkit-transform: rotate(118deg) skew(-5deg);
   }
@@ -412,12 +418,18 @@ app-groupchat {
     float: right;
     right: 5px;
     bottom: 5px;
+    color: var(--ion-color-darkgrey);
   }
+
+  // .icon-inner {
+  //  background-color: var(--ion-color-darkgrey);
+  // }
 
   .reply-icon {
     position: relative;
     right: 0;
     bottom: 0;
+    color: var(--ion-color-darkgrey);
   }
 
   .reply-icon.photo {
@@ -434,7 +446,7 @@ app-groupchat {
     border-radius: 5px;
     padding: 2px 10px;
     max-width: 100%;
-    background-color: #e6e5eb;
+    background-color:var(--ion-color-lightgrey);
   }
 
   .closeReply {
@@ -480,7 +492,9 @@ app-groupchat {
     bottom: 10px;
     right: 8px;
     font-size: 15px;
+    
   }
+
 
   .message-footer {
     background: #ffffff;
