--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -78,7 +78,7 @@
     </ion-row>
   </ion-grid>
   
-  <!-- I changed the famework below to match a mobile view// It should render 
+  <!-- I changed the framework below to match a mobile view// It should render 
   how the Figma model was shown with same pixel sizes and everything.-->
   
   <ion-row class="ion-justify-content-center ion-margin-vertical" *ngIf="view === 'profile'">
