--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -435,6 +435,7 @@ app-dashboard {
     background-color: red;
   }
 
+  //I hard coded this for mobile
   .person-card {
     max-width: 375px;
     max-height: 174px;
