implemented half of figma designs

--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -29,11 +29,11 @@
     <ion-buttons slot="start" *ngIf="modalPage">
       <ion-button (click)="closeModal()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
-    <ion-title slot="start" *ngIf="view === 'profile'">Me</ion-title>
+    <ion-title slot="start" *ngIf="view === 'profile'">My Dashboard</ion-title>
     <ion-title slot="start" *ngIf="view === 'calendar'">Calendar</ion-title>
       <ion-searchbar class="header-searchbar" [(ngModel)]="searchKeyword" debounce="500" (ionChange)="executeSearch($event)" (ionCancel)="cancelSearch($event)" *ngIf="platform.width() >= 768 && !platform.is('ios')" slot="start"></ion-searchbar>
     <ion-item lines="none" routerLink="/app/user/profile" *ngIf="userData.user && platform.width() >= 768" slot="end">
-      <ion-avatar class="profile-picture" slot="start">
+      <ion-avatar slot="start">
         <ion-img *ngIf="userData.user && userData.user.avatar" [src]="userData.user.avatar"></ion-img>
         <ion-img *ngIf="!userData.user || !userData.user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
       </ion-avatar>
@@ -41,13 +41,16 @@
         {{userData.user.first_name}} {{userData.user.last_name}}
       </ion-label>
     </ion-item>
+    <ion-button *ngIf="!modalPage && userData.user" slot="end" fill="clear">
+      <ion-icon name="settings-outline"></ion-icon>
+    </ion-button>
     <ion-buttons slot="end" *ngIf="!userData.user">
       <ion-button routerLink="/createCommunityregister" color="grey">
         Sign In
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-  <ion-toolbar *ngIf="platform.width() < 768 || platform.is('ios')">
+  <!-- <ion-toolbar *ngIf="platform.width() < 768 || platform.is('ios')">
     <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" (ionChange)="executeSearch($event)" (ionCancel)="cancelSearch($event)"></ion-searchbar>
   </ion-toolbar>
   <ion-toolbar *ngIf="userData.user && authService.incompleteOnboardProcess">
@@ -68,7 +71,7 @@
         </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
-  </ion-toolbar>
+  </ion-toolbar> -->
 </ion-header>
 
 <ion-content *ngIf="userData.user">
@@ -79,43 +82,42 @@
   </ion-grid>
   <ion-grid class="person-container">
     <ion-row class="ion-justify-content-center ion-margin-vertical" *ngIf="view === 'profile'">
-      <!-- <ion-card id="person-profile-card" class="person-card" (click)="openMyProfile()">
-        <ion-card-header>
-          <div class="person-photo-container">
-            <ion-img class="person-photo" *ngIf="userData.user.avatar" [src]="userData.user.avatar"></ion-img>
-            <ion-img class="person-photo" *ngIf="!userData.user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
-          </div>
-        </ion-card-header>
-        <div class="top-pattern"></div>
-        <div class="middle-pattern"></div>
-        <div class="bottom-pattern"></div>
-        <ion-card-content class="person-content ion-no-padding">
-          <ion-item lines="none" class="person-content-item ion-no-margin">
-            <div class="person-content-left">
-              <div class="person-name ion-text-md-uppercase">
-                {{userData.user.first_name}} {{userData.user.last_name}}
-              </div>
-              <div class="person-title" [innerHTML]="userData.user.title"></div>
-            </div>
-            <div class="person-content-right" [ngClass]="{'content-border': bio }" [innerHTML]="userData.user.bio"></div>
-          </ion-item>
-        </ion-card-content>
-      </ion-card> -->
-      <ion-col>
-        <ion-avatar>
+      <ion-col style="margin: 0 10px">
+        <ion-avatar class="profile-picture">
           <ion-img class="person-photo" *ngIf="userData.user.avatar" [src]="userData.user.avatar"></ion-img>
-        </ion-avatar>
-        <ion-avatar>
           <ion-img class="person-photo" *ngIf="!userData.user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
         </ion-avatar>
       </ion-col>
-      <ion-col>
+      <ion-col style="margin: 0 10px" size="7">
         <h1>{{userData.user.first_name}} {{userData.user.last_name}}</h1>
-        <div class="person-content-right" [ngClass]="{'content-border': bio }" [innerHTML]="userData.user.bio"></div>
-        <ion-button fill="solid" shape="round" color="primary" size="small">Edit Profile</ion-button>
+        <!-- <div class="person-content-right" [ngClass]="{'content-border': bio }" [innerHTML]="userData.user.bio"></div> -->
+        <div [ngClass]="{'content-border': bio }" [innerHTML]="userData.user.bio"></div>
+        <ion-button fill="outline" shape="round" color="primary" size="small" style="width: 100%">Edit Profile</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
+
+  <!-- Complete your Profile Banner -->
+  <ion-toolbar *ngIf="userData.user && authService.incompleteOnboardProcess">
+    <ion-item-sliding side="end">
+      <ion-item (click)="finishOnboarding($event)" lines="none">
+        <ion-avatar slot="start">
+          <ion-img src="assets/img/finish.png"></ion-img>
+        </ion-avatar>
+        <div class="ion-text-wrap message-container">
+          <ion-label class="ion-margin-top">Complete Your Profile</ion-label>
+          <p class="message-detail">Answer a few questions to complete your profile.</p>
+        </div>
+        <ion-icon name="chevron-forward-outline" color="primary" slot="end"></ion-icon>
+      </ion-item>
+      <ion-item-options>
+        <ion-item-option color="primary" (click)="authService.incompleteOnboardProcess = null">
+          Dismiss
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-toolbar>
+
   <!--List My Mentors-->
   <div *ngIf="myMentors && myMentors.length && view === 'profile'">
     <ion-item class="section" color="lightgrey" lines="none"> <!--section header-->
