--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -50,7 +50,7 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-  <ion-toolbar *ngIf="platform.width() < 768 || platform.is('ios')">
+  <!-- <ion-toolbar *ngIf="platform.width() < 768 || platform.is('ios')">
     <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" (ionChange)="executeSearch($event)" (ionCancel)="cancelSearch($event)"></ion-searchbar>
   </ion-toolbar>
   <ion-toolbar *ngIf="userData.user && authService.incompleteOnboardProcess">
@@ -71,7 +71,7 @@
         </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
-  </ion-toolbar>
+  </ion-toolbar> -->
 </ion-header>
 
 <ion-content *ngIf="userData.user">
