Calvin's version of the Me page
1.8.3 (1)

--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -689,6 +689,11 @@ app-showfeature {
     right: 15px;
   }
 
+  .overall-progress {
+    width: 95%;
+    margin-bottom: 10px;
+  }
+
   .progress {
     width: 85%;
     margin-bottom: 10px;
