--- a/src/app/pages/discover/discover/discover.page.html
+++ b/src/app/pages/discover/discover/discover.page.html
@@ -39,7 +39,7 @@
       </ion-label>
     </ion-item>
   </ion-toolbar>
-  <ion-toolbar *ngIf="userData.user && authService.incompleteOnboardProcess">
+  <!--<ion-toolbar *ngIf="userData.user && authService.incompleteOnboardProcess">
     <ion-item-sliding side="end">
       <ion-item (click)="authService.openOnboarding({ modalPage: true })" lines="none">
         <ion-avatar slot="start">
@@ -57,7 +57,7 @@
         </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
-  </ion-toolbar>
+  </ion-toolbar>-->
 </ion-header>
 
 <ion-content>
